Fix analysis board position on ios
Fixes #1550

--- a/src/styl/analyse.styl
+++ b/src/styl/analyse.styl
@@ -22,6 +22,8 @@
     padding-bottom 28px
 
 .analyse-boardWrapper
+  display flex
+  flex-flow column nowrap
   flex-grow 0
   flex-shrink 0
   align-self center
